patientManage css 2